--- a/intro/Working with AusTraits.qmd
+++ b/intro/Working with AusTraits.qmd
@@ -33,6 +33,7 @@ To install `austraits` run the following code in the console:
 
 ```{r, eval=FALSE}
 devtools::install_github("traitecoevo/austraits")
+
 ```
 
 After installing, load the packages
@@ -50,13 +51,13 @@ You can access the data in either of two ways:
 1. Use the package austraits
 
 ```{r}
-austraits <- load_austraits(version = "4.1.0", path = "downloads")
+austraits <- load_austraits(version = "4.1.0", path = "intro/downloads")
 ```
 
 2. Download the data to your computer from <https://zenodo.org/record/7583087/files/austraits-4.1.0.rds?download=1> and save it in the folder `downloads` in this project, then read it in using
 
 ```{r}
-austraits <- readRDS("downloads/austraits-4.1.0.rds")
+austraits <- readRDS("intro/downloads/austraits-4.1.0.rds")
 ```
 
 # Exploring the data
@@ -152,8 +153,9 @@ Note: nrow() doesn't work here! Why not? (hint: use the typeof() function)
 2. From the taxa table, how many accepted species are there?
 
 ```{r}
-austraits$taxa$taxonomic_status %>% 
-  filter(taxonomic_status == "") %>% length()
+taxa_status <- austraits$taxa %>% select(taxonomic_status, taxon_name)
+
+taxa_status %>% filter(taxonomic_status == "accepted") %>% nrow()
 ```
 
 Answer: 
@@ -162,11 +164,11 @@ Answer:
 3. How many trait records in the top 5 recorded taxa?
 
 ```{r}
-austraits %>% group_by(traits$trait_name) %>%
-  sort(traits$value, decreasing = TRUE)
+trait_records <- austraits$traits %>% 
+  group_by(trait_name) %>%
+  select(trait_name, value, observation_id)
 
-austraits %>% group_by(traits$trait_name) %>% nrow(traits$observation_id)
-
+trait_records %>% sort()
 ```
 
 Answer: 
@@ -175,10 +177,13 @@ Answer:
 4. What is the range of values in these 3 traits: flower_colour, seed_N_per_seed_dry_mass, leaf_dry_mass
 
 ```{r}
-austraits <- austraits$traits %>% tibble(trait_name, value, unit, taxon_name) 
-#%>% filter(trait_name == "flower_colour")
+austraits_subset <- austraits$traits %>% select(trait_name, value, unit, taxon_name)
 
+austraits_subset %>% filter(trait_name == "flower_colour") %>% unique(value)
 
+austraits_subset %>% filter(trait_name == "seed_N_per_seed_dry_mass") %>% range(value)
+
+austraits_subset %>% filter(trait_name == "leaf_dry_mass") %>% range(value)
 ```
 
 Answer: 
@@ -227,7 +232,7 @@ wood_density$wood_density_kg %>% mean()
 Answer: 
 
 
-9.
+9. How many contributors from Australian institutions? (too hard?) Top contributor?
 
 ```{r}
 
@@ -236,9 +241,10 @@ Answer:
 Answer:
 
 
-10.
+10. What kinds of records are there, are they from literature, lab, specimen, etc?
 
 ```{r}
+unique(austraits$traits$basis_of_record)
 
 ```
 
@@ -250,23 +256,36 @@ Answer.
 
 Basic ggplot formulas
 
-```{r}
+- we need to pass in the data, the x and y variables, the plot type, axes labels (with units!) and sometimes scales, title and any other aesthetics to make the plot easier to interpret and help to get the result across (e.g. colour scheme, faceting)
 
+```{r}
+data %>%
+  ggplot(aes(xvar, yvar)) +
+  geom_point() +
+  xlab() +
+  ylab() +
+  ggtitle() +
+  theme_classic()
 ```
+
 
 Challenges
 
-Plot XXX
+1. Plot values for wood density above
+```{r}
+wood_density %>%
+  ggplot(aes(as.integer(value))) +
+  geom_histogram(bins = 10, binwidth = ) +
+  theme_classic()
+```
+
+2. Recreate Figure 2a. from the Austraits paper (https://doi.org/10.1038/s41597-021-01006-6)
+
+We want to plot the coverage of traits by taxa. This figure shows the coverage of taxa for each trait, yellow representing the presence of data, from a subset of 500 randomly selected taxa.
+
 ```{r}
 
 ```
-
-Recreate Figure 2a.
-
-```{r}
-
-```
-
 
 
 # Some fancy tricks
