--- a/intro/Working with AusTraits.qmd
+++ b/intro/Working with AusTraits.qmd
@@ -11,7 +11,7 @@ The goals of this practical are to:
 
 1. Get hands on experience with AusTraits, as an example of a big-data resource on traits of biological organisms,
 2. Refresh, extend, and practice your skills in data manipulation and visualisation, using R and the tidyverse packages, and
-3. Learn some fancy tricks when working with tables of data: joining relational tables, pivotting tables, and nesting tables
+3. Learn some fancy tricks when working with tables of data: joining relational tables, pivoting tables, and nesting tables
 
 As background, we suggest reading the paper describing AusTraits:
 
@@ -52,7 +52,7 @@ You can access the data from AusTraits in either of two ways:
 1. Use the package [austraits](https://github.com/traitecoevo/austraits) to download the data directly from the web. This is the easiest way to get started.
 
 ```{r}
-austraits <- load_austraits(version = "4.1.0", path = "intro/downloads")
+austraits <- load_austraits(version = "4.1.0", path = "downloads")
 ```
 
 2. Manually download the data to your computer from <https://zenodo.org/record/7583087/files/austraits-4.1.0.rds?download=1> and save it in the folder `downloads` in this project, then read it in using
@@ -229,7 +229,7 @@ Answer: min = 57.1kg, max = 1260kg, mean = 608.6kg
 
 Answer: 491 (out of 606)
 
-Note: In this and other cases, you can't simply filter directly on "austraits$contributors$affiliation" -- this object would be of character type, basically a long sequence of character "strings", and what we want is a structured dataframe or tibble like what you are familiar with, with rows and columns that can be filtered and selected for easily using dplyr functions
+Note: In this and other cases, you can't simply filter directly on "austraits$contributors$affiliation" -- this object would just be a long list of character strings, and what we want is a data frame or tibble like what you are familiar with, with rows and columns that can be filtered and selected for using dplyr
 
 
 10. What kinds of records are there, are they from literature, a lab, a specimen collection, etc?
@@ -282,7 +282,7 @@ We want to plot the coverage of traits by taxa, i.e. for how many traits are dat
 3. What traits have the widest coverage, i.e. most taxa?
 
 
-4. The austraits package also enables some plotting, e.g.
+3. The austraits package also enables some plotting, e.g.
 
 ```{r}
 plot_trait_distribution_beeswarm(austraits, "leaf_area", "dataset_id")
@@ -291,7 +291,7 @@ plot_trait_distribution_beeswarm(austraits, "leaf_area", "dataset_id")
 You can change 
 
 - the second argument to specific traits
-- the thrid argument to be family 
+- the third argument to be family 
 
 # Some fancy tricks
 
@@ -362,7 +362,7 @@ Large databases often come in `long format`, where each row is a single observat
 
 The `pivot_wider` function from the `tidyr` package allows you to reshape a dataset from long to wide format. Let's try it out. For this exercise let's use a subset of the data, e.g. the data with id `Falster_2005_1` (check out the paper here <https://doi.org/10.1111/j.0022-0477.2005.00992.x>) 
 
-Challenge: Use the filter function to create a subset of the traits column with only the data from the paper `Falster_2005_1`. Also remove the records with trait_name of `huber_value` as it contains some dome duplicate records which make pivotting harder.
+Challenge: Use the filter function to create a subset of the traits column with only the data from the paper `Falster_2005_1`. Also remove the records with trait_name of `huber_value` as it contains some dome duplicate records which make pivoting harder.
 
 ```{r}
 data <- austraits$traits %>% 
